# mytriton

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: debug_mlir_lowering.py  print_mlir_pipeline.py
src/mytriton/: __init__.py  ast_frontend.py  block_shapes.py  compiler.py  cuda_codegen.py  cuda_utils.py  language.py  mlir_backend.py  mlir_codegen.py  optim.py  ssa.py  ssa_verification.py  trace.py  type_inference.py
tests/: conftest.py  test_add_kernel.py  test_ast_runtime_loop.py  test_block_constructors.py  test_copy_kernel.py  test_cuda_compiler.py  test_dot_kernel.py  test_leaky_relu_kernel.py  test_long_row_sum_kernel.py  test_math_ops.py  test_matmul_2d_kernel.py  test_matmul_dot_kernel.py  test_matmul_shared_kernel.py  test_matrix_add_kernel.py  test_mlir_backend.py  test_mlir_codegen.py  test_naive_matmul_kernel.py  test_optim.py  test_public_typing.py  test_reduce_extremum_kernel.py  test_reduce_sum_kernel.py  test_relu_kernel.py  test_shared_memory.py  test_sigmoid_kernel.py  test_softmax_kernel.py  test_ssa_order.py  test_ssa_verification.py  test_tile_shape_kernel.py  test_trace.py  test_type_inference.py
