[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mytriton"
version = "0.1.0"
description = "A tiny symbolic tracer inspired by the Triton language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2"]

[project.optional-dependencies]
cuda12 = ["cupy-cuda12x>=13"]
test = ["pytest>=8"]
dev = [
    "mypy>=1.14",
    "numpy>=2,<2.3",
    "pre-commit>=4.0",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mytriton"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E4",  # pycodestyle imports
    "E7",  # pycodestyle statements
    "E9",  # pycodestyle runtime errors
    "F",   # Pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["mytriton"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["mlir", "mlir.*"]
ignore_missing_imports = true
